# substreams-template

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Dockerfile.gitpod  Makefile  README.md  build.rs  build.sh  go.mod  substream.yaml  substreams.yaml  wasm_demo.yaml
.github/workflows/: gitpod-docker.yml
demo/: Cargo.toml
demo/src/: lib.rs  utils.rs
manifest/: wasm_demo.yaml
proto/: codec_eth.proto  contract.proto  counter.proto  database.proto  erc20.proto
src/: graph.rs  lib.rs  utils.rs
src/abi/: erc721.rs  mod.rs
src/pb/: dfuse.ethereum.codec.v1.rs  eth.contract.v1.rs  eth.counter.v1.rs  eth.database.v1.rs  eth.erc20.v1.rs  eth.erc721.v1.rs  mod.rs
