[package]
name = "substreams-template"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-template"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "0.10.1"
substreams = "0.0.8-beta"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum", branch="develop" }

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum", branch="develop" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"