[package]
name = "substreams-template"
version = "0.1.0"
description = "Substream template demo project"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-template"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "^0.11.0"
# Use latest from https://crates.io/crates/substreams
substreams = "0.3.2"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.6.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.6.2"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"